# spring-bazel-starter

./: .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE
scripts/: docker-build.sh  docker-deploy.sh  docker-run-dev.sh
services/: BUILD.bazel
services/web-service/: .gitignore  BUILD.bazel  Dockerfile  deployment.yaml
services/web-service/scripts/: docker-build.sh  docker-deploy.sh  docker-run-dev.sh  prod-update-docker-image.sh
services/web-service/src/: dev.env
services/web-service/src/main/java/co/hadwen/web/: Application.java  ControllerConfig.java  Dto.java  GlobalExceptionHandler.java
services/web-service/src/main/java/co/hadwen/web/exception/: NotFoundException.java  ValidationException.java
services/web-service/src/main/java/co/hadwen/web/exception/dto/: InvalidValueDTO.java  ValidationErrorDTO.java
services/web-service/src/main/java/co/hadwen/web/security/: WebSecurityConfig.java
services/web-service/src/main/java/co/hadwen/web/user/: SearchType.java  UserController.java
services/web-service/src/main/java/co/hadwen/web/user/dto/: UserDTO.java
services/web-service/src/test/java/co/hadwen/web/auth/: LoginControllerTest.java
